Uses new route to retrieve datasets based on sample id

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -45,14 +45,16 @@
     }
 
     function refreshDatasets(state) {
-        let url = state.public_endpoint + '/available/dataset';
+        let url = state.public_endpoint + '/sample/list/dataset/' + state.barcode_prefix + state.sample_id;
         $.ajax({
             url: url,
             type: "GET",
             success: function(data)
             {
-                let resultMap = data;
-                populateSelect("#dataset", resultMap, "16S");
+                let resultMap = {};
+                for (var key in data)
+                    resultMap[data[key]] = data[key]
+                populateSelect("#dataset", resultMap, data[0]);
                 //TODO FIXME HACK:
                 //Updating $("#dataset") should have automatically updated
                 //the state but jquery's change event is not triggering linked
