--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -20,6 +20,10 @@
         background-color: #FFFFFF;
         color: #000000;
     }
+
+    div.results_text {
+        text-align: left;
+    }
 </style>
 
 <script type="text/javascript" language="javascript" src="/static/js/ruleset.js"></script>
@@ -594,7 +598,7 @@
     <div class="col-sm border">
         <div class="tab-content" id="v-pills-tabContent">
           <div class="tab-pane fade show active" id="compare" role="tabpanel" aria-labelledby="compare-tab">
-            <div class="column" style="text-align: center">
+            <div class="column results_text">
                 <h3>How You Compare</h3>
                 <br/>
               <p>
@@ -636,7 +640,7 @@
             </div>
           </div>
           <div class="tab-pane fade" id="diversity" role="tabpanel" aria-labelledby="diversity-tab">
-            <div class="column" style="text-align: center">
+            <div class="column results_text">
                 <h3>Alpha Diversity</h3>
                 <br>
                 <p>Here, we're providing a measure of the diversity of your sample, and how
@@ -656,7 +660,7 @@
             </div>
           </div>
           <div class="tab-pane fade" id="similarity" role="tabpanel" aria-labelledby="similarity-tab">
-            <div class="column" style="text-align: center">
+            <div class="column results_text">
             <h3>Beta Diversity</h3>
             <br>
             <p>Here we display how your sample fits in among the other samples
@@ -676,7 +680,7 @@
           </div>
           <div class="tab-pane fade" id="taxonomy" role="tabpanel" aria-labelledby="taxonomy-tab">
               <div class="row">
-                  <div class="column" style="text-align: center">
+                  <div class="column results_text">
                     <h3> What is in your sample? </h3>
                     <br>
                     <p>The table below shows the relative abundances of all of the organisms we
@@ -708,7 +712,7 @@
               </div>
               <hr/>
               <div class="row">
-                  <div class="column" style="text-align: center">
+                  <div class="column results_text">
                     <p>
                     In the plot below, you can see the most commonly observed
                     microbial genera in the dataset, and distribution of ranks of
