--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -127,6 +127,10 @@
                             let rep = representatives[genus_key];
                             let sum = generaSums[genus_key];
                             rep.relativeAbundance = sum;
+                            for (var key of ["Kingdom", "Phylum", "Class", "Order", "Family", "Genus"]){
+                                if (rep[key] != null && rep[key].startsWith("[") && rep[key].endsWith("]"))
+                                    rep[key] = rep[key].substring(1,rep[key].length-1)
+                            }
                             newData.push(rep);
                         }
                         return newData;
@@ -492,9 +496,13 @@
             let layout = {
                 "title": "Ranked Relative Abundance",
                 "yaxis": {
+                    "title": "Common Genera",
                     "automargin": true,
                     "categoryorder": "array",
                     "categoryarray": topXOrdered
+                },
+                xaxis: {
+                    title: 'Rank'
                 }
             };
             Plotly.newPlot("taxa-violin", data, layout);
@@ -686,8 +694,9 @@
                     <p>The table below shows the relative abundances of all of the organisms we
                     observed in your sample. To produce this, we took the DNA sequences from
                     your sample, and compared them against publicly available annotated
-                    reference databases. In some cases, a sequence may uniquely match a
-                    database record, in other cases a sequence may match may different records.
+                    reference databases. In some cases, one of the DNA sequences we recover
+                    from your sample may uniquely match a database record, in other cases a
+                    sequence may match two or more different records.
                     To handle the uncertainty that can arise, we rely on a well used and
                     publicly available microbiome software package called <a
                     href="https://qiime2.org" target="_blank">QIIME 2</a>. The exact approach
@@ -697,7 +706,7 @@
                       <table id="taxonomyTable" class="display" style="width:100%">
                         <thead>
                         <tr>
-                          <th>Relative Abundance</th>
+                          <th>Relative Abundance (Fraction of Sequences)</th>
                           <th>Kingdom</th>
                           <th>Phylum</th>
                           <th>Class</th>
@@ -715,8 +724,8 @@
                   <div class="column results_text">
                     <p>
                     In the plot below, you can see the most commonly observed
-                    microbial genera in the dataset, and distribution of ranks of
-                    those genera.  For example, <span id="top_ranked_genus_from_plot" class="info-loader text-info" >TOP_RANKED_GENUS_FROM_PLOT</span>
+                    microbial genera in the dataset, and relative abundance of
+                    those taxa in the entire Microsetta dataset.  For example, <span id="top_ranked_genus_from_plot" class="info-loader text-info" >TOP_RANKED_GENUS_FROM_PLOT</span>
                     typically has the highest relative abundance of samples in the
                     dataset.
                     </p>
