UCSD colors, add a missing .map

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -12,7 +12,6 @@
 <link rel="stylesheet" type="text/css" href="/static/vendor/emperor/vendor/css/chosen.min.css">
 <link rel="stylesheet" type="text/css" href="/static/vendor/emperor/vendor/css/jquery.contextMenu.min.css">
 <link rel="stylesheet" type="text/css" href="/static/css/4_column_flex.css" />
-<link rel="stylesheet" href="/static/vendor/font-awesome-4.7.0/css/font-awesome.min.css"/>
 <style>
     /*Removes the .active, .accordion:hover effect from minimal_interface.css*/
     /* Could potentially use color: initial but has less support...? */
@@ -28,7 +27,7 @@
     }
     .tooltipper {
         display: inline-block; /* tooltip misplaced horizontally otherwise */
-        color: #747678;    
+        color: var(--ucsd-dark-grey)
     }
     .tooltip-inner {
       text-align: center;
