--- a/microsetta_interface/templates/sitebase.jinja2
+++ b/microsetta_interface/templates/sitebase.jinja2
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="/static/vendor/bootstrap-4.4.1-dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/static/css/minimal_interface.css" />
+    <link rel="stylesheet" href="/static/css/ucsd_colors.css" />
     <style>
         body {
             padding-top: 50px;
