--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -33,7 +33,8 @@
 <script type="text/javascript" charset="utf8" src="/static/vendor/js/jquery.dataTables.js"></script>
 <script src="/static/vendor/DataTables/Buttons-1.6.2/js/dataTables.buttons.min.js"></script>
 <script src="/static/vendor/DataTables/Buttons-1.6.2/js/buttons.html5.min.js"></script>
-<!-- plotly must precede emperor imports as well.   I'm getting the feeling
+<script src="/static/vendor/DataTables/PercentageBars-1.10.21/js/percentageBars.js"></script>
+    <!-- plotly must precede emperor imports as well.   I'm getting the feeling
      that emperor doesn't know how to play nice. -->
 <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
 
@@ -128,7 +129,7 @@
                         for (let genus_key in generaSums){
                             let rep = representatives[genus_key];
                             let sum = generaSums[genus_key];
-                            rep.relativeAbundance = sum;
+                            rep.relativeAbundance = (sum * 100).toFixed(4);
                             for (var key of ["Kingdom", "Phylum", "Class", "Order", "Family", "Genus"]){
                                 if (rep[key] != null && rep[key].startsWith("[") && rep[key].endsWith("]"))
                                     rep[key] = rep[key].substring(1,rep[key].length-1)
@@ -141,7 +142,7 @@
                 columns: [
                     {
                         data: "relativeAbundance",
-                        render: $.fn.dataTable.render.number(',', '.', 4),
+                        render: $.fn.dataTable.render.percentBar('round','#FFF', '#269ABC', '#31B0D5', '#286090', 4, 'groove')
                     },
                     {data: "Kingdom"},
                     {data: "Phylum"},
@@ -152,7 +153,7 @@
                 ],
                 order: [[ 0, "desc" ]],
                 dom: "Bfrtip",
-                buttons: ["csv"]
+                buttons: [{extend: 'csv', className: 'btn btn-info'}],
             }
         );
     }
@@ -507,7 +508,7 @@
                     title: 'Rank'
                 }
             };
-            Plotly.newPlot("taxa-violin", data, layout);
+            Plotly.newPlot("taxa-violin", data, layout, {displayModeBar: false});
         });
     }
 
@@ -708,7 +709,7 @@
                       <table id="taxonomyTable" class="display" style="width:100%">
                         <thead>
                         <tr>
-                          <th>Relative Abundance (Fraction of Sequences)</th>
+                          <th>% of Sample</th>
                           <th>Kingdom</th>
                           <th>Phylum</th>
                           <th>Class</th>
