Made unicode explicit in case we ever save file in ascii

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -505,7 +505,7 @@
                     "categoryarray": topXOrdered
                 },
                 xaxis: {
-                    title: '← Least Abundant | Most Abundant →'
+                    title: '\u2190 Least Abundant | Most Abundant \u2192'
                 }
             };
             Plotly.newPlot("taxa-violin", data, layout, {displayModeBar: false});
