--- a/microsetta_interface/templates/create_nonhuman_source.jinja2
+++ b/microsetta_interface/templates/create_nonhuman_source.jinja2
@@ -5,12 +5,13 @@
     <script>
         $(document).ready(function(){
             preventImplicitSubmission("new_source_form");
+            disableInputOnSubmit("#new_source_form", "#submit_button", "Creating Source...")
         });
     </script>
 {% endblock %}
 {% block content %}
     <div class="container">
-        <form method="post" name="new_source_form" action="/accounts/{{account_id}}/create_nonhuman_source/">
+        <form method="post" id="new_source_form" name="new_source_form" action="/accounts/{{account_id}}/create_nonhuman_source/">
             <div class="form-group">
                 <label for="source_name" name="source_name_label">Environment name (e.g., microwave):</label>
                 <input id="source_name" name="source_name" class="form-control" type="text" required/>
@@ -19,7 +20,7 @@
                 <label for="source_description" name="source_description_label">Environment description (optional):</label>
                 <input id="source_description" name="source_description" class="form-control" type="text"/>
              </div>
-            <input type="submit" class="btn btn-primary" value="Create Source"/>
+            <input id="submit_button" type="submit" class="btn btn-primary" value="Create Source"/>
         </form>
     </div>
 {% endblock %}
