--- a/microsetta_interface/templates/new_participant.jinja2
+++ b/microsetta_interface/templates/new_participant.jinja2
@@ -104,6 +104,10 @@
         $("#7-12-div").hide();
         $("#13-17-div").hide();
         $("#18-plus-div").hide();
+        disableInputOnSubmit("#0-6-form", "#0-6-submit_button", "Saving...");
+        disableInputOnSubmit("#7-12-form", "#7-12-submit_button", "Saving...");
+        disableInputOnSubmit("#13-17-form", "#13-17-submit_button", "Saving...");
+        disableInputOnSubmit("#18-form", "#18-submit_button", "Saving...");
     });
 </script>
 <style>
@@ -152,7 +156,7 @@
         <tr><td>{{ tl['PARTICIPANT_PARENT_1'] |e}}</td><td><input tabindex="7" type="text" name="parent_1_name" id="0-6-form_parent_1_name" required data-rule-required="true"></td></tr>
         <tr><td>{{ tl['PARTICIPANT_PARENT_2'] |e}}</td><td><input tabindex="8" type="text" name="parent_2_name" id="0-6-form_parent_2_name" required data-rule-required="true"></td></tr>
         <tr><td>{{ tl['PARTICIPANT_DECEASED_PARENTS'] |e}}</td><td><input  tabindex="9" type="checkbox" name="deceased_parent" id="deceased_parent" value="true" onclick="relax_parents(this)"></td></tr>
-        <tr><td><input type="submit" value="I Accept"></td><td></td></tr>
+        <tr><td><input type="submit" id="0-6-submit_button" value="I Accept"></td><td></td></tr>
     </table>
     </form>
 </div>
@@ -192,7 +196,7 @@
         <tr><td>{{ tl['PARTICIPANT_PARENT_1'] |e}}</td><td><input tabindex="7" type="text" name="parent_1_name" id="7-12-form_parent_1_name" required data-rule-required="true"></td></tr>
         <tr><td>{{ tl['PARTICIPANT_PARENT_2'] |e}}</td><td><input tabindex="8" type="text" name="parent_2_name" id="7-12-form_parent_2_name" required data-rule-required="true"></td></tr>
         <tr><td>{{ tl['PARTICIPANT_DECEASED_PARENTS'] |e}}</td><td><input  tabindex="9" type="checkbox" name="deceased_parent" id="deceased_parent" value="true" onclick="relax_parents(this)"></td></tr>
-        <tr><td><input type="submit" value="I Accept"></td><td></td></tr>
+        <tr><td><input type="submit" id="7-12-submit_button" value="I Accept"></td><td></td></tr>
     </table>
     </form>
 </div>
@@ -226,7 +230,7 @@
         <tr><td>{{ tl['PARTICIPANT_PARENT_1'] |e}}</td><td><input tabindex="7" type="text" name="parent_1_name" id="13-17-form_parent_1_name" required data-rule-required="true"></td></tr>
         <tr><td>{{ tl['PARTICIPANT_PARENT_2'] |e}}</td><td><input tabindex="7" type="text" name="parent_2_name" id="13-17-form_parent_2_name" required data-rule-required="true"></td></tr>
         <tr><td>{{ tl['PARTICIPANT_DECEASED_PARENTS'] |e}}</td><td><input  tabindex="9" type="checkbox" name="deceased_parent" id="deceased_parent" value="true" onclick="relax_parents(this)"></td></tr>
-        <tr><td><input type="submit" value="I Accept"></td><td></td></tr>
+        <tr><td><input type="submit" id="13-17-submit_button" value="I Accept"></td><td></td></tr>
     </table>
     </form>
 </div>
@@ -238,7 +242,7 @@
 {{ tl['EXHIBIT_A'] }}
 </div>
 <div class="" id="consent">
-        <hr>
+    <hr>
         <a href="http://oag.ca.gov/sites/all/files/agweb/pdfs/research/bill_of_rights.pdf" target="_blank">{{ tl['BILL_OF_RIGHTS']|e}}</a><br/>
         <form id="18-form" name="consent_info" onsubmit="return min_validation('18-form');" action="{{ post_url }}" method="post">
         <input type="hidden" name="age_range" value="18-plus">
@@ -247,7 +251,7 @@
     <p><table>
         <tr><td><label for='participant_name'>{{ tl['PARTICIPANT_NAME'] |e}}</label></td><td><input tabindex="2" type="text" name="participant_name" id="participant_name" required data-rule-required="true"><div class="red right">*</div></td></tr>
         <tr><td>{{ tl['PARTICIPANT_EMAIL'] |e}}</td><td><input tabindex="3" type="email"  name="participant_email" id="participant_email" required data-rule-required="true"><div class="red right">*</div></td></tr>
-        <tr><td><input type="submit" value="I Accept"></td><td></td></tr>
+        <tr><td><input type="submit" id="18-submit_button" value="I Accept"></td><td></td></tr>
     </table></p>
     </form>
 </div>
