ENH update title and axis labels

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -398,9 +398,9 @@
                 // annotation gets kind of weird, due becuase it might
                 // point between bins.
                 barmode: "overlay",
-                title: "Microbial Richness by Country",
+                title: "Microbial Alpha-Diversity by Country",
                 xaxis: {
-                    title: "\u2190 Less Diverse | More Diverse \u2192",
+                    title: "\u2190 Less Diverse | More Diverse \u2192<br>Faith's Phylogenetic Diversity",
                 },
                 yaxis: {
                     title: "Percentage of Individuals",
