--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -625,43 +625,65 @@
             <div class="column results_text">
                 <h3>How You Compare?</h3>
                 <br/>
-              <p>
-              The most common types of organisms (in a very broad sense) that we observe in human associated microbiome samples are bacteria and archaea. But what are bacteria and archaea? Well, these are two domains of life that diverged from each other billions of years ago. Humans, on the other hand, are part of the eukaryotic domain of life. 
-              </p>
-              
-              <p>
-              In your 
-              <span id="sample_type" class="info-loader text-success" >SAMPLE_TYPE</span> 
-              sample, we observed
-              <span id="n_bacteria" class="info-loader text-success" >N_BACTERIA</span> 
-              unique bacterial 
-              <span id="taxa-tooltip" class="tooltipper" data-title="The term 'taxa' refers to many organisms, and is the plural of 'taxon' which refers to a single organism.">taxa</span>
-              and 
-              <span id="n_archaea" class="info-loader text-success" >N_ARCHAEA</span> 
-              unique archaeal taxa. In contrast, in the
-              <span id="dataset-tooltip" class="tooltipper" data-title="Dataset refers to the collection of samples included, and how they were processed. Your sample is part of multiple datasets, which can changed by using the 'Dataset' pulldown menu in the navigation bar.">dataset</span>
-              as a whole, we have observed
-              <span id="n_bacteria_background" class="info-loader text-success" >N_BACTERIA_BACKGROUND</span>
-              unique bacterial taxa and
-              <span id="n_archaea_background" class="info-loader text-success" >N_ARCHAEA_BACKGROUND</span>
-              unique archaeal taxa.
-              </p>
-              
-              <p>
-              We just told you the number of taxa there are in your microbiome, but which important groups do they represent? How diverse is your sample? What is diversity? Did your sample capture everything there is to see, even the rarest of microbes? You can check several measures of this on the <a class="fake-tab" href="#diversity" data-link="#diversity-tab">Your sample diversity</a> tab.
-              </p>
-              
-              <p>
-              How does your sample compare to others?  We can compare your sample to others by way of your microbiome.  For example, the person most microbially similar to you 
-              <span id="age_nearest_neighbor" class="info-loader text-success" >is AGE_IN_YEARS_OF_NEAREST_NEIGHBOR</span>
-              and 
-              <span id="more_or_less_sweets_nearest_neighbor" class="info-loader text-success" >eats MORE_OR_LESS sugary sweets than you</span>!
-              If you'd like to visualize how you compare to others, please select <a class="fake-tab" href="#similarity" data-link="#similarity-tab">Diversity similarities</a> from the navigation bar.
-              </p>
-              
-              <p>
-              What are the names of the organisms in your sample? To find out, please select <a class="fake-tab" href="#taxonomy" data-link="#taxonomy-tab">Taxonomy</a> from the navigation bar.
-              </p>
+                <p>
+                    Your microbiome is a rainforest of diverse microbes dominated
+                    by microbes - some 40 trillion bacteria, weighing around 1 lb,
+                    live all over and in your body. The diversity of your
+                    microbiome, how similar it is to other peoples', and the types
+                    of bacteria living inside you have all been linked to health,
+                    disease and lifestyle traits in numerous studies. Scientists
+                    use microbiome data from large groups of people to compare the
+                    microbiome between different groups of people. For example, we
+                    explore how the microbiome differs between people that eat many
+                    kinds of plants (salads, vegetables, fruits) each week,
+                    compared to those that eat very few. Or we can look at how
+                    exercising frequently or rarely influences the number of
+                    different bacteria inside your body
+                </p>
+                
+                <p>
+                Scientists often use 3 different approaches to see how your microbiome differs:
+                </p>
+
+                <p>
+                <strong>DIVERSITY</strong>: Scientists will count the number of different types
+                of microbes found in a sample and see if that changes in people
+                with different diseases or lifestyles. This is called diversity
+                analysis. Counting the number of different types of microbes in
+                a sample is like figuring out the biodiversity of the sample,
+                and as we all know, for the most part, more biodiversity is
+                better. For more information on how diverse your microbiome is
+                in compared to different people, check out <a class="fake-tab" 
+                href="#diversity" data-link="#diversity-tab">Your sample diversity</a>.
+                </p>
+
+                <p>
+                <strong>SIMILARITY</strong>: Scientists often find that people with similar
+                microbiomes (similar types of microbes living on or inside you) share
+                health, disease, and lifestyle traits – almost like your
+                microbiome is a signature of how "you are, what you eat," and
+                how much you exercise, etc.
+                </p>
+
+                <p>
+                We looked at how often the types of microbes found in
+                your sample were also in other people's microbiomes in our
+                database. Then we identified all the people whose microbiomes
+                were similar to your microbiome (which means
+                the people with whom you share a lot of the same types of
+                bacteria). This information is then compared to that group of
+                people's questionnaire responses. You can see how they answered
+                their questionnaires in <a class="fake-tab" href="#similarity" 
+                data-link="#similarity-tab">Diversity similarities</a>.
+                </p>
+
+                <p>
+                <strong>TAXONOMY</strong>: If you REALLY want to know the names of the microbes
+                that live inside you, and a little bit of information on what
+                they do, go to <a class="fake-tab" href="#taxonomy" data-link="#taxonomy-tab">What's in your sample?</a> 
+                to browse a list of your microbial friends, and see how abundant 
+                they were in your sample!
+                </p>
             </div>
           </div>
           <div class="tab-pane fade" id="diversity" role="tabpanel" aria-labelledby="diversity-tab">
